// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 1. Kit Amigdalite Bacteriana > deve montar exatamente 3 itens para paciente pediátrico de 15 kg (com ajuste por peso) e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "5 mL",
    "frequencyText": "Administrar 5 mL via oral de 8 em 8 horas durante 10 dias consecutivos.",
    "instructions": "Administrar 5 mL via oral de 8 em 8 horas durante 10 dias consecutivos.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Amoxicilina 250mg/5mL pó para suspensão oral (Amoxil)",
    "presentation": "1 frasco (150 mL)",
    "quantity": "1 frasco (150 mL)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "15 gotas",
    "frequencyText": "Administrar 15 gotas via oral de 8 em 8 horas após as refeições por 3 dias.",
    "instructions": "Administrar 15 gotas via oral de 8 em 8 horas após as refeições por 3 dias.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Ibuprofeno 100mg/mL suspensão gotas (Alivium)",
    "presentation": "1 frasco (20 mL)",
    "quantity": "1 frasco (20 mL)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "15 gotas",
    "frequencyText": "Administrar 15 gotas via oral de 6 em 6 horas se dor ou febre (máx 4x ao dia).",
    "instructions": "Administrar 15 gotas via oral de 6 em 6 horas se dor ou febre (máx 4x ao dia).",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Dipirona Sódica 500mg/mL gotas (Novalgina)",
    "presentation": "1 frasco (20 mL)",
    "quantity": "1 frasco (20 mL)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 1. Kit Amigdalite Bacteriana > deve montar exatamente 3 itens para paciente sem peso (formulação padrão) e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 cápsula via oral de 8 em 8 horas durante 7 a 10 dias consecutivos.",
    "instructions": "Tomar 1 cápsula via oral de 8 em 8 horas durante 7 a 10 dias consecutivos.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Amoxicilina 500mg cápsula (Amoxil)",
    "presentation": "1 caixa (21 cápsulas)",
    "quantity": "1 caixa (21 cápsulas)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 comprimido via oral de 8 em 8 horas após as refeições por 3 dias.",
    "instructions": "Tomar 1 comprimido via oral de 8 em 8 horas após as refeições por 3 dias.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Ibuprofeno 600mg comprimido",
    "presentation": "1 caixa (10 comprimidos)",
    "quantity": "1 caixa (10 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 comprimido via oral de 6 em 6 horas em caso de dor ou febre.",
    "instructions": "Tomar 1 comprimido via oral de 6 em 6 horas em caso de dor ou febre.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Dipirona Sódica 500mg comprimido (Novalgina)",
    "presentation": "1 caixa (20 comprimidos)",
    "quantity": "1 caixa (20 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 2. Kit Gastroenterite & Vômitos (GECA) > deve montar exatamente 3 itens para paciente de 15 kg e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Dissolver 1 comprimido sob a língua de 8 em 8 horas em caso de náuseas ou vômitos.",
    "instructions": "Dissolver 1 comprimido sob a língua de 8 em 8 horas em caso de náuseas ou vômitos.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Ondansetrona 8mg comprimido de desintegração oral (Vonau Flash)",
    "presentation": "1 caixa (10 comprimidos)",
    "quantity": "1 caixa (10 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Diluir 1 envelope em 1 litro de água filtrada/fervida. Beber ao longo do dia e após cada evacuação líquida.",
    "instructions": "Diluir 1 envelope em 1 litro de água filtrada/fervida. Beber ao longo do dia e após cada evacuação líquida.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Sais para Reidratação Oral (SRO) 27,9g sachê",
    "presentation": "4 envelopes",
    "quantity": "4 envelopes",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 40 gotas via oral de 8 em 8 horas em caso de cólicas e gases.",
    "instructions": "Tomar 40 gotas via oral de 8 em 8 horas em caso de cólicas e gases.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Simeticona 75mg/mL emulsão oral gotas (Luftal)",
    "presentation": "1 frasco (15 mL)",
    "quantity": "1 frasco (15 mL)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 2. Kit Gastroenterite & Vômitos (GECA) > deve montar exatamente 3 itens para paciente sem peso e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Dissolver 1 comprimido sob a língua de 8 em 8 horas em caso de náuseas ou vômitos.",
    "instructions": "Dissolver 1 comprimido sob a língua de 8 em 8 horas em caso de náuseas ou vômitos.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Ondansetrona 8mg comprimido de desintegração oral (Vonau Flash)",
    "presentation": "1 caixa (10 comprimidos)",
    "quantity": "1 caixa (10 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Diluir 1 envelope em 1 litro de água filtrada/fervida. Beber ao longo do dia e após cada evacuação líquida.",
    "instructions": "Diluir 1 envelope em 1 litro de água filtrada/fervida. Beber ao longo do dia e após cada evacuação líquida.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Sais para Reidratação Oral (SRO) 27,9g sachê",
    "presentation": "4 envelopes",
    "quantity": "4 envelopes",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 40 gotas via oral de 8 em 8 horas em caso de cólicas e gases.",
    "instructions": "Tomar 40 gotas via oral de 8 em 8 horas em caso de cólicas e gases.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Simeticona 75mg/mL emulsão oral gotas (Luftal)",
    "presentation": "1 frasco (15 mL)",
    "quantity": "1 frasco (15 mL)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 3. Kit IVAS / Gripe & Resfriado > deve montar exatamente 3 itens para paciente de 15 kg (ajuste pediátrico) e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "15 gotas",
    "frequencyText": "Administrar 15 gotas via oral de 6 em 6 horas se dor ou febre (máx 4x ao dia).",
    "instructions": "Administrar 15 gotas via oral de 6 em 6 horas se dor ou febre (máx 4x ao dia).",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Dipirona Sódica 500mg/mL gotas (Novalgina)",
    "presentation": "1 frasco (20 mL)",
    "quantity": "1 frasco (20 mL)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "15 gotas",
    "frequencyText": "Administrar 15 gotas via oral de 6 em 6 horas se dor ou febre.",
    "instructions": "Administrar 15 gotas via oral de 6 em 6 horas se dor ou febre.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Paracetamol 200mg/mL gotas (Tylenol Bebê/Criança)",
    "presentation": "1 frasco (15 mL)",
    "quantity": "1 frasco (15 mL)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Aplicar 5 a 10 mL em cada narina com seringa ou spray de 4 em 4 horas.",
    "instructions": "Aplicar 5 a 10 mL em cada narina com seringa ou spray de 4 em 4 horas.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Cloreto de Sódio 0,9% frasco para lavagem nasal (Soro Fisiológico)",
    "presentation": "1 frasco (100 mL)",
    "quantity": "1 frasco (100 mL)",
    "route": "Uso Nasal",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 3. Kit IVAS / Gripe & Resfriado > deve montar exatamente 3 itens para paciente sem peso e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 comprimido via oral de 6 em 6 horas em caso de dor ou febre.",
    "instructions": "Tomar 1 comprimido via oral de 6 em 6 horas em caso de dor ou febre.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Dipirona Sódica 500mg comprimido (Novalgina)",
    "presentation": "1 caixa (20 comprimidos)",
    "quantity": "1 caixa (20 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 comprimido via oral de 8 em 8 horas se dor persistente.",
    "instructions": "Tomar 1 comprimido via oral de 8 em 8 horas se dor persistente.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Paracetamol 750mg comprimido (Tylenol)",
    "presentation": "1 caixa (20 comprimidos)",
    "quantity": "1 caixa (20 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Aplicar 5 a 10 mL em cada narina com seringa ou spray de 4 em 4 horas.",
    "instructions": "Aplicar 5 a 10 mL em cada narina com seringa ou spray de 4 em 4 horas.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Cloreto de Sódio 0,9% frasco para lavagem nasal (Soro Fisiológico)",
    "presentation": "1 frasco (100 mL)",
    "quantity": "1 frasco (100 mL)",
    "route": "Uso Nasal",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 4. Kit Lombalgia / Dor Aguda > deve montar exatamente 4 itens para paciente de 15 kg e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 comprimido via oral de 12 em 12 horas após as refeições por 5 dias.",
    "instructions": "Tomar 1 comprimido via oral de 12 em 12 horas após as refeições por 5 dias.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Cetoprofeno 100mg comprimido (Profenid)",
    "presentation": "1 caixa (10 comprimidos)",
    "quantity": "1 caixa (10 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 comprimido via oral de 6 em 6 horas em caso de dor intensa.",
    "instructions": "Tomar 1 comprimido via oral de 6 em 6 horas em caso de dor intensa.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Dipirona Sódica 1g comprimido",
    "presentation": "1 caixa (10 comprimidos)",
    "quantity": "1 caixa (10 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 comprimido via oral à noite ao deitar durante 5 dias.",
    "instructions": "Tomar 1 comprimido via oral à noite ao deitar durante 5 dias.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Cloridrato de Ciclobenzaprina 5mg comprimido (Miosan)",
    "presentation": "1 caixa (10 comprimidos)",
    "quantity": "1 caixa (10 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 cápsula via oral pela manhã em jejum durante o uso do anti-inflamatório.",
    "instructions": "Tomar 1 cápsula via oral pela manhã em jejum durante o uso do anti-inflamatório.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Omeprazol 20mg cápsula",
    "presentation": "1 caixa (14 cápsulas)",
    "quantity": "1 caixa (14 cápsulas)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 4. Kit Lombalgia / Dor Aguda > deve montar exatamente 4 itens para paciente sem peso e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 comprimido via oral de 12 em 12 horas após as refeições por 5 dias.",
    "instructions": "Tomar 1 comprimido via oral de 12 em 12 horas após as refeições por 5 dias.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Cetoprofeno 100mg comprimido (Profenid)",
    "presentation": "1 caixa (10 comprimidos)",
    "quantity": "1 caixa (10 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 comprimido via oral de 6 em 6 horas em caso de dor intensa.",
    "instructions": "Tomar 1 comprimido via oral de 6 em 6 horas em caso de dor intensa.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Dipirona Sódica 1g comprimido",
    "presentation": "1 caixa (10 comprimidos)",
    "quantity": "1 caixa (10 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 comprimido via oral à noite ao deitar durante 5 dias.",
    "instructions": "Tomar 1 comprimido via oral à noite ao deitar durante 5 dias.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Cloridrato de Ciclobenzaprina 5mg comprimido (Miosan)",
    "presentation": "1 caixa (10 comprimidos)",
    "quantity": "1 caixa (10 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 cápsula via oral pela manhã em jejum durante o uso do anti-inflamatório.",
    "instructions": "Tomar 1 cápsula via oral pela manhã em jejum durante o uso do anti-inflamatório.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Omeprazol 20mg cápsula",
    "presentation": "1 caixa (14 cápsulas)",
    "quantity": "1 caixa (14 cápsulas)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 5. Kit Infecção Urinária (ITU) > deve montar exatamente 2 itens para paciente de 15 kg e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Dissolver em 1/2 copo de água e tomar em dose única à noite antes de deitar, após esvaziar a bexiga.",
    "instructions": "Dissolver em 1/2 copo de água e tomar em dose única à noite antes de deitar, após esvaziar a bexiga.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Fosfomicina Trometamol 3g sachê granulado (Monuril)",
    "presentation": "1 envelope (3g)",
    "quantity": "1 envelope (3g)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 a 2 drágeas via oral de 8 em 8 horas em caso de dor ou cólica.",
    "instructions": "Tomar 1 a 2 drágeas via oral de 8 em 8 horas em caso de dor ou cólica.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Butilbrometo de Escopolamina + Dipirona (Buscopan Composto)",
    "presentation": "1 caixa (20 drágeas)",
    "quantity": "1 caixa (20 drágeas)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 5. Kit Infecção Urinária (ITU) > deve montar exatamente 2 itens para paciente sem peso e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Dissolver em 1/2 copo de água e tomar em dose única à noite antes de deitar, após esvaziar a bexiga.",
    "instructions": "Dissolver em 1/2 copo de água e tomar em dose única à noite antes de deitar, após esvaziar a bexiga.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Fosfomicina Trometamol 3g sachê granulado (Monuril)",
    "presentation": "1 envelope (3g)",
    "quantity": "1 envelope (3g)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 a 2 drágeas via oral de 8 em 8 horas em caso de dor ou cólica.",
    "instructions": "Tomar 1 a 2 drágeas via oral de 8 em 8 horas em caso de dor ou cólica.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Butilbrometo de Escopolamina + Dipirona (Buscopan Composto)",
    "presentation": "1 caixa (20 drágeas)",
    "quantity": "1 caixa (20 drágeas)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 6. Kit Crise de Asma / Broncoespasmo > deve montar exatamente 2 itens para paciente de 15 kg (ajuste de prednisolona oral) e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "",
    "frequencyText": "Inalar 2 a 4 jatos com espaçador de 6 em 6 horas ou de 4 em 4 horas se tosse/falta de ar.",
    "instructions": "Inalar 2 a 4 jatos com espaçador de 6 em 6 horas ou de 4 em 4 horas se tosse/falta de ar.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Sulfato de Salbutamol 100mcg/dose spray aerossol (Aerolin)",
    "presentation": "1 frasco (200 doses)",
    "quantity": "1 frasco (200 doses)",
    "route": "Uso Inalatória",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": 15,
    "doseCalculatedText": "5 mL",
    "frequencyText": "Administrar 5 mL via oral 1 vez ao dia, pela manhã, por 5 dias.",
    "instructions": "Administrar 5 mL via oral 1 vez ao dia, pela manhã, por 5 dias.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Fosfato Sódico de Prednisolona 3mg/mL solução oral (Prelone)",
    "presentation": "1 frasco (60 mL)",
    "quantity": "1 frasco (60 mL)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;

exports[`Kits Clínicos e Montagem de Itens (montarItensDoKit) > 6. Kit Crise de Asma / Broncoespasmo > deve montar exatamente 2 itens para paciente sem peso e bater snapshot 1`] = `
[
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Inalar 2 a 4 jatos com espaçador de 6 em 6 horas ou de 4 em 4 horas se tosse/falta de ar.",
    "instructions": "Inalar 2 a 4 jatos com espaçador de 6 em 6 horas ou de 4 em 4 horas se tosse/falta de ar.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Sulfato de Salbutamol 100mcg/dose spray aerossol (Aerolin)",
    "presentation": "1 frasco (200 doses)",
    "quantity": "1 frasco (200 doses)",
    "route": "Uso Inalatória",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
  {
    "calculatedFromWeight": undefined,
    "doseCalculatedText": "",
    "frequencyText": "Tomar 1 a 2 comprimidos (40mg) via oral pela manhã durante 5 dias.",
    "instructions": "Tomar 1 a 2 comprimidos (40mg) via oral pela manhã durante 5 dias.",
    "isContinuous": false,
    "isSpecialControl": false,
    "name": "Prednisolona 20mg comprimido (ou 3mg/mL suspensão)",
    "presentation": "1 caixa (10 comprimidos)",
    "quantity": "1 caixa (10 comprimidos)",
    "route": "Uso Oral",
    "scheduleInterval": "Conforme posologia",
    "scheduleTimes": [],
  },
]
`;
